test/libsolidity/syntaxTests/constructor/two_constructors.sol
contract test {
	constructor(uint) { }
	constructor() {}
}
// ----
// DeclarationError: (40-56): More than one constructor defined.
